Bug #25800 Embedded server requires mysql.plugin
Submitted: 23 Jan 2007 19:54 Modified: 11 Jul 2007 16:38
Reporter: Todd Farmer Email Updates:
Status: Closed
Category:libmysqld Severity:S3 (Non-critical)
Version:5.1.14 OS:Any
Assigned to: Antony Curtis Target Version:

[23 Jan 2007 19:54] Todd Farmer
Description:
When starting the embedded server in 5.1.14, warnings are generated that the mysql.plugin
table does not exist.  Because the mysql database as a whole generally does not exist in
an embedded deployment, it should not be required that an empty mysql.plugin table be
provided to avoid the startup warning.

How to repeat:
Start embedded server in 5.1 without providing a mysql.plugin table.

Suggested fix:
Provide a mechanism for embedded server to start without mysql.plugin table and not issue
a warning.
[24 Jan 2007 2:10] Miguel Solorzano
Thank you for the bug report.

miguel@light:~/dbs/mysql-5.1/libmysqld/examples$ ./mysql
mysql_embedded: Table 'mysql.plugin' doesn't exist
Welcome to the MySQL monitor.  Commands end with ; or \g.
Your MySQL connection id is 0
Server version: 5.1.15-beta-embedded-debug Source distribution

Type 'help;' or '\h' for help. Type '\c' to clear the buffer.

mysql>
[14 May 2007 16:00] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/26625

ChangeSet@1.2515, 2007-05-14 09:00:21-07:00, acurtis@xiphis.org +1 -0
  Bug#25800
    "Embedded server requires mysql.plugin table"
    When building embedded library, we do not want/need the plugin_load() function
    which is used to load the mysql.plugin table.
[22 May 2007 10:34] Ingo Struewing
I vote for push, provided that we really want to ignore mysql.plugin in the embedded
server altogether, that the statement INSTALL PLUGIN fails with a reasonable error
message in an embedded server, and the latter is shown by a test case if possible (I
didn't find any embedded-only tests in our test suite, but I believe they should be
doable).
[25 May 2007 19:25] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/27363

ChangeSet@1.2514, 2007-05-25 12:22:35-07:00, antony@ppcg5.local +3 -0
  bug#25800
    "Embedded server requires mysql.plugin"
    provide new configure option to specify if the embedded build
    should load the mysql.plugin system table during initialization.
[25 May 2007 19:26] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/27365

ChangeSet@1.2514, 2007-05-25 12:23:46-07:00, antony@ppcg5.local +3 -0
  bug#25800
    "Embedded server requires mysql.plugin"
    provide new configure option to specify if the embedded build
    should load the mysql.plugin system table during initialization.
[30 May 2007 20:43] Brian Aker
You need to move the configure.in rules out to their own rule set in the config ac-macros
directory.
No test case.
[30 May 2007 23:00] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/27743

ChangeSet@1.2516, 2007-05-30 16:00:09-07:00, antony@ppcg5.local +4 -0
  Bug#25800
    "Embedded server requires mysql.plugin"
    Allow developers to choose at configure time the specific behaviour
    that they require:
      --with-embedded-load-plugin-table
    Must be specified for the embedded build to load plugins upon
    initialization from the mysql.plugin table, same as daemon build.
[12 Jun 2007 17:23] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/28588

ChangeSet@1.2547, 2007-06-12 10:22:36-07:00, antony@ppcg5.local +1 -0
  bug#25800
    "Embedded server requires mysql.plugin"
    Omit error message for missing mysql.plugin table when compiling
    for embedded library
[13 Jun 2007 2:28] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/28621

ChangeSet@1.2547, 2007-06-12 19:28:05-07:00, antony@ppcg5.local +1 -0
  Bug#25800
    "Embedded server requires mysql.plugin"
    Embedded builds should not print any error when the mysql.plugin
    table does not exist. This is achieved by checking for the existance
    of the mysql.plugin table before attempting to open it and proceed
    silently if it does not exist.
[13 Jun 2007 6:50] Ingo Struewing
Ok to push from me.
[15 Jun 2007 3:57] Antony Curtis
Pushed into 5.1-engines repository
[18 Jun 2007 7:49] Bugs System
Pushed into 5.1.20-beta
[11 Jul 2007 16:38] Paul DuBois
Noted in 5.1.20 changelog.

The embedded server library displayed error messages at startup if
the mysql.plugin table was not present. This no longer occurs.