Bug#25800   "Embedded server requires mysql.plugin"   Embedded builds should not print any error when the mysql.plugin   table does not exist. This is achieved by checking for the existance   of the mysql.plugin table before attempting to open it and proceed   silently if it does not exist.

sql/sql_plugin.cc:
  bug25800
    Embedded builds should not print any error when the mysql.plugin
    table does not exist. This is achieved by checking for the existance
    of the mysql.plugin table before attempting to open it and proceed
    silently if it does not exist.